--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,43 @@
 {% extends 'layout/base.html' %}
 
 {% block body %}
+<!--shortcut to generate a variable location => ,container>.row>.col-md-4 -->
+<div class="container">         
+    <div class="row form-row">   
+        <div class="col-lg-4">
+            <h1 class="my-4 display-4 text-center">Sign In</h1>
+            <form class="shadow-lg p-3 rounded bg-light">
+                <div class="mb-3">
+                  <label for="Email" class="form-label">Email address</label>
+                  <input type="email" class="form-control" id="Email" name="Email" placeholder="ex: Ravi@gmail.com">
+                </div>
+                <div class="mb-3">
+                  <label for="Password" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="Password" name="password" placeholder="Your Password">
+                  <div class="form-text" id="passHelp">Password should be min 6 characters</div>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+    </div>
+</div>
+
+{% endblock %}
+
+{% block css %}
+<style>
+    .form-row {
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+    }
+    main {
+        background-image: url("https://images.unsplash.com/photo-1619963258837-b83f3406cfcd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+        background-size: cover;
+        background-position: bottom;
+    }
+</style>
+{% endblock %}
 
 
-{% endblock %}  
